[Cocoa] NSFileWrapper associated with _WKAttachment https://bugs.webkit.org/show_bug.cgi?id=198871 <rdar://problem/51760625>

Reviewed by Wenson Hsieh.

* UIProcess/API/Cocoa/_WKAttachment.mm:
(-[_WKAttachment dealloc]):
Ensure we destruct the API::Object associated with this so RetainPtrs can release.


Canonical link: https://commits.webkit.org/212843@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246448 268f45cc-cd09-0410-ab3c-d52691b4dbfc